--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mongoose": "^8.19.1",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "cross-env": "^10.1.0"
